# meditations

./: Cargo.toml  README.md
lapis/: 241227.rs  250119.rs  250123.rs  250124.rs  250130.rs  250204.rs  250301.rs  250810.rs  251021.rs  linear_transformation.rs  nonlinear_transformation.rs  pfp.rs  pfp_rings.rs  snippets.rs
src/: io.rs
