[package]
name = "meditations"
version = "0.1.0"
edition = "2021"
authors = ["amy universe <nopenullnilvoid00@gmail.com>"]
repository = "https://github.com/tomara-x/meditations"
license = "MIT OR Apache-2.0"

[dependencies]
fundsp = "0.20"
cpal = "0.15"
crossbeam-channel = "0.5"

[lib]
name = "io"
path = "src/io.rs"
